[package]
name = "node-executor-primitives"
version = "0.1.0"
authors = ["developer <developer@finastate.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }

primitives = { path = "../../../primitives" }
